<resources>
    <string name="app_name">Rent</string>
    <string name="enter_email">E-mail</string>
    <string name="enter_password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="new_user">Новый пользователь?</string>
    <string name="sign_in">Авторизация</string>
    <string name="sign_up">Регистрация</string>
    <string name="privacy_policy_signup">Подтверждая регистрацию, Вы даете свое согласие на обработку персональных данных и соглашаетесь с <a href="https://msk.aura-rent.ru/privacy-policy/">политикой конфиденциальности</a>.</string>
    <string name="remember_me_checkbox">Запомнить меня</string>
    <string name="default_nick"><b>?</b></string>
    <string name="cart">Корзина</string>
    <string name="currency">&#160;руб</string>
    <string name="defaultNameProduct">Nikon EOD. Digital Camera For Good Guys</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    <string name="preference_file_key">com.example.apprent.PREFERENCE_FILE_KEY</string>-->
    <string name="saved_log_in_key">UserStateId</string>
    <string name="home_page">Главная</string>
    <string name="search_page">Поиск</string>
    <string name="category_page">Каталог</string>
    <string name="cart_page">Корзина</string>
    <string name="profile_page">Профиль</string>
    <string name="task_complete_notification_message">текст уведомления</string>
    <string name="price_from">Цена от</string>
    <string name="reservationButton">БРОНЬ ПО ТЕЛЕФОНУ</string>
    <string name="changeDateButton">ВЫБОР ДАТ</string>
    <string name="search">Поиск</string>
    <string name="back_arrow">Назад</string>
    <string name="more">Больше</string>
    <string name="category_fragment_name">Каталог</string>
    <string name="cart_fragment_name">Корзина</string>
    <string name="profile_fragment_name">Профиль</string>
    <string name="search_fragment_name">Поиск</string>
    <string name="home_fragment_name">Главная</string>
    <string name="product_fragment_name"></string>
    <!-- Strings related to login -->
    <string name="logout">Выйти из аккаунта</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Пароль должен быть больше 5 символов</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_email">Ошибка при вводе почты</string>
    <string name="pass1_is_not_equal_pass2">Пароли не совпадают</string>
    <string name="cart_is_empty">Корзина пуста</string>
    <string name="name_cart_item">Аренда&#160;</string>
    <string name="date_cart_item">Дата начала аренды:&#160;</string>
    <string name="count_cart_item">Количество:&#160;</string>
    <string name="period_cart_item">Срок аренды:&#160;</string>
    <string name="full_cart_item_final_price">Итоговая цена:&#160;</string>
    <string name="remove_from_cart">Удалить из корзины</string>
    <string name="request_now">Заказать сейчас</string>
    <string name="request_a_call">Заказать звонок</string>
    <string name="cart_item">cart_anim</string>
    <string name="authentication_fragment_name" />
    <string name="profile_account">Аккаунт</string>
    <string name="profile_data">Данные</string>
    <string name="profile_control">Управление</string>
    <string name="profile_booking">Бронирование</string>
    <string name="search_hint">Наименование товара</string>
    <string name="delivery">УДОБНАЯ И\nБЫСТРАЯ\nДОСТАВКА</string>
    <string name="pay_info">ОПЛАТА\nНАЛИЧНЫМИ И\nПО КАРТЕ</string>
    <string name="no_pledge">БЕЗ ЗАЛОГА.\nСОВСЕМ</string>
    <string name="extends_set">РАСШИРЕННЫЙ\nКОМПЛЕКТ К\nОБОРУДОВАНИЮ</string>
    <string name="request_a_call2">Оставьте заявку и мы свяжемся с Вами\nв ближайшее время</string>
    <string name="request_a_call_your_name">Введите имя</string>
    <string name="request_a_call_your_phone">Введите телефон</string>
    <string name="privacy_policy">Оставляя заявку, я даю свое согласие на обработку персональных данных и соглашаюсь с условиями и <a href="https://msk.aura-rent.ru/privacy-policy/">политикой конфиденциальности</a>.</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior" translatable="false">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="user_address">Адрес</string>
    <string name="shipping">Получение</string>
    <string name="pay">Оплата</string>
    <string name="review">Просмотр</string>
    <string name="shipping_description">Адрес\nполучения</string>
    <string name="pay_description">Способ\nоплаты</string>
    <string name="review_description">Проверьте\nданные</string>
    <string name="continue_button">Продолжить</string>
    <string name="phone_input">Номер телефона</string>
    <string name="promo_code">Введите промокод</string>
    <string name="pay_button">Оплатить</string>
    <string name="title_top_bar_ordering">Оформление заказа</string>
    <string name="thanks_for_your_order">Спасибо за ваш заказ!</string>
    <string name="order_item_id">Заказ №</string>
    <string name="order_item_is_delivery">Доставка</string>
    <string name="order_item_is_pickup">Самовывоз</string>
    <string name="order_item_is_paid">Оплачен</string>
    <string name="order_item_rent_start">Начало аренды:&#160;</string>
    <string name="order_item_number_products">Количество товаров:&#160;</string>
    <string name="order_item_is_not_paid">Оплата при получении</string>
    <string name="pickup_address">Самовывоз по адресу</string>
    <string name="rental_price">Аренда:&#160;</string>
    <string name="delivery_price">Доставка:&#160;</string>
    <string name="final_price_shipping_fragment">Итого:&#160;</string>
    <string name="first_name_review">Имя</string>
    <string name="second_name_review">Фамилия</string>
    <string name="user_address_review">Адрес</string>
    <string name="phone_number_review">Номер телефона</string>
    <string name="comment_hint">Комментарий к заказу</string>
    <string name="enter_card_details">Введите реквизиты карты</string>
    <string name="default_card_number">0000 0000 0000 0000</string>
    <string name="MM_YY_card_details_hint">ММ/ГГ</string>
    <string name="cvv_cvc_card_details_hint">000</string>
    <string name="apply">Применить</string>
    <string name="payment_upon_receipt">Оплата при получении</string>
    <string name="final_price_fragment_pay">К оплате:&#160;</string>
    <string name="name_error">Ошибка при вводе имени</string>
    <string name="second_name_error">Ошибка при вводе фамилии</string>
    <string name="address_error">Введите полный адрес</string>
    <string name="phone_error">Введите телефон (только цифры)</string>
    <string name="pickup_string">Самовывоз</string>
    <string name="order_send_error">Произошла ошибка при отправке заказа!</string>
    <string name="order_is_send">Ваш заказ отправлен!</string>
    <string name="profile_info">Информация</string>
    <string name="profile_personal_data">Личные данные</string>
    <string name="profile_my_cards">Мои карты</string>
    <string name="profile_go_to_chat">Задать вопрос</string>
    <string name="save_data">Сохранить данные</string>
    <string name="like_text_profile">Мы гарантируем отличное состояние техники</string>
    <string name="support_text_profile">Онлайн поддержка во время аренды</string>
    <string name="teach_text_profile">Обучаем и рассказываем тонкости техники</string>
    <string name="office_text_profile">Имеем удобный офис в центре города</string>
    <string name="delivery_text_profile">Делаем срочную доставку день в день</string>
    <string name="courier_text_profile">Делаем бесплатную доставку от 25000 руб</string>
    <string name="wallet_text_profile">Принимаем оплату наличными и по карте</string>
    <string name="wallet_2_text_profile">Мы работаем без залога. Совсем</string>
    <string name="about_the_company">О компании</string>
    <string name="tab">\u0009</string>
    <string name="about_the_company_2">Команда AURA-RENT планомерно развивает новые направления аренды с октября 2016 года. Сегодня мы имеем глубокую экспертизу в следующих направлениях:</string>
    <string name="about_the_company_3">\u0009&#8226; аренда технологичных новинок бытовой электроники;\n\u0009&#8226; прокат популярного электротранспорта;\n\u0009&#8226; аренда оборудования для бизнеса;\n\u0009&#8226; аренда полезных вещей для дома;\n\u0009&#8226; аренда желанных товаров для детей;\n\u0009&#8226; аренда инвентаря для спорта и отдыха;\n\u0009&#8226; аренда нужных решений для отпуска и путешествий.</string>

</resources>