<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".ui.profile.ProfileFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/personal_data"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_personal_data"
        android:textAlignment="textStart"
        android:textColor="@color/main_text"
        app:cornerRadius="20dp"
        app:strokeWidth="3dp" />

    <LinearLayout
        android:id="@+id/personal_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/alpha_null"
            app:boxStrokeColor="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/alpha_null"
            app:boxStrokeColor="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/alpha_null"
            app:boxStrokeColor="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="@color/alpha_null"
            app:boxStrokeColor="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_delivery_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_address" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:textColor="@color/main_text"
            app:cornerRadius="20dp"
            app:strokeWidth="3dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/information"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textAlignment="textStart"
        android:textColor="@color/main_text"
        app:cornerRadius="20dp"
        app:strokeWidth="3dp" />

    <LinearLayout
        android:id="@+id/information_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wallet_2" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/wallet_2_text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/wallet" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/wallet_text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/courier" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/courier_text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/delivery" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/delivery_text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/office" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/office_text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/teach" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/teach_text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/support" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/support_text_profile" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/like" />

                    <TextView
                        style="@style/infoTextProfile"
                        android:text="@string/like_text_profile" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_the_company"
            android:textColor="@color/main_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_the_company_2"
            android:textColor="@color/main_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_the_company_3"
            android:textColor="@color/main_text"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/my_cards"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_my_cards"
        android:textAlignment="textStart"
        android:textColor="@color/main_text"
        app:cornerRadius="20dp"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ask_support"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_go_to_chat"
        android:textAlignment="textStart"
        android:textColor="@color/main_text"
        app:cornerRadius="20dp"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#DDDDDD"
        android:text="@string/logout"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:cornerRadius="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/main_text"
        android:textStyle="italic" />

</LinearLayout>