<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication_page.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_for_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/main_text" />

        <EditText
            android:id="@+id/password_for_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/main_text" />

        <EditText
            android:id="@+id/repeat_password_for_sign_up"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="@color/main_text" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/alpha_null"
            android:hapticFeedbackEnabled="false"
            android:shadowColor="#00BAA4A4"
            android:text="@string/sign_up"
            android:textColor="@color/button_aura_text"
            app:cornerRadius="3dp"
            tools:ignore="InvalidId" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:text="@string/privacy_policy_signup"
            android:textAlignment="textStart"
            android:textColor="@color/main_text"
            android:textColorLink="@color/for_hyperlink"
            android:textSize="12sp" />

    </LinearLayout>

</FrameLayout>