<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp"
    android:orientation="vertical"
    tools:context=".ui.ordering.ReviewOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_hint_review_order"
            style="@style/reviewOrderTextHint"
            android:text="@string/first_name_review" />

        <TextView
            android:id="@+id/name_review_order"
            style="@style/reviewOrderText." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/second_name_hint_review_order"
            style="@style/reviewOrderTextHint"
            android:text="@string/second_name_review" />

        <TextView
            android:id="@+id/second_name_review_order"
            style="@style/reviewOrderText." />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delivery_address_hint_review_order"
            style="@style/reviewOrderTextHint"

            android:text="@string/user_address_review" />

        <TextView
            android:id="@+id/delivery_address_review_order"
            style="@style/reviewOrderText."/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_hint_review_order"
            style="@style/reviewOrderTextHint"
            android:text="@string/phone_number_review" />

        <TextView
            android:id="@+id/phone_review_order"
            style="@style/reviewOrderText." />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/order_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/comment_hint" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>