<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_for_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/main_text" />

        <EditText
            android:id="@+id/password_for_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/main_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signIn"
                style="@style/AuraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/sign_in"
                android:textColor="@color/button_aura_text"
                tools:ignore="InvalidId" />

            <Button
                android:id="@+id/forgot_password_for_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/alpha_null"
                android:paddingLeft="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/for_hyperlink">

            </Button>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>